initial configuration of test generators